# trust-protocol

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy-devnet.yml
programs/trust-protocol/: Cargo.toml
programs/trust-protocol/src/: errors.rs  lib.rs  state.rs
programs/trust-protocol/src/instructions/: contract.rs  dispute.rs  identity.rs  initialize.rs  insurance.rs  mod.rs
scripts/: deploy-devnet.sh  initialize-protocol.ts
sdk/src/: index.ts  trust-protocol.ts  types.ts  utils.ts
tests/: trust-protocol.test.ts
