[workspace]
members = [
    "programs/trust-protocol"
]
resolver = "2"

[patch.crates-io]
# Pin blake3 to 1.7.0 which uses constant_time_eq 0.3.x (avoids edition2024 requirement in CI)
blake3 = { version = "=1.7.0" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


