[package]
name = "trust-protocol"
version = "0.1.0"
description = "Decentralized trust infrastructure for autonomous AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trust_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
